# Table-66

./: .firebaserc  .gitignore  CMakeLists.txt  README.md  config.xml  ionic.config.json  package-lock.json  package.json  pom.xml
.firebase/: hosting.WQ.cache  hosting.d3d3.cache
CMakeModules/: wasm.cmake
contracts/: CMakeLists.txt  escrow.abi  escrow.cpp  escrow.h
src/: index.html  manifest.json
src/app/: app.module.ts  app.scss
src/main/java/table66/docueos/: DocueosApplication.java
src/main/java/table66/docueos/model/: AbstractJson.java  Passport.java
src/main/java/table66/docueos/services/: MerkleService.java
src/main/java/table66/docueos/util/: JsonUtil.java
src/pages/appove/: appove.html  appove.module.ts  appove.scss  appove.ts
src/pages/authority/: authority.html  authority.module.ts  authority.scss  authority.ts
src/pages/crop-id/: crop-id.html  crop-id.module.ts  crop-id.scss  crop-id.ts
src/pages/generate-proof/: generate-proof.html  generate-proof.module.ts  generate-proof.scss  generate-proof.ts
src/pages/home/: home.html  home.ts
src/pages/upload-id/: upload-id.html  upload-id.module.ts  upload-id.scss  upload-id.ts
src/pages/user/: user.html  user.ts
src/pages/verificator/: image.ts  verificator.html  verificator.module.ts  verificator.scss  verificator.ts
src/providers/backend-svc/: backend-svc.ts
src/providers/docs/: docs.ts  model.ts
src/providers/eos/: config.ts  eos.ts  model.ts
src/providers/photo/: photo.ts
src/test/java/table66/docueos/: DocueosApplicationTests.java
